# BeliefMusicPlayer

./: .gitignore  README.md
docs/: .$project.drawio.bkp  .$project.drawio.dtmp  project.drawio
src/: CMakeLists.txt  dependency_injection.h  main.cpp  resources.qrc
src/adapters/: CMakeLists.txt
src/adapters/controllers/: local_music_controller.cpp  local_music_controller.h  music_controller.cpp  music_controller.h  playback_controller.cpp  playback_controller.h
src/adapters/gateways/: local_music_gateway.cpp  local_music_gateway.h  music_gateway.cpp  music_gateway.h
src/adapters/interface/controller/: i_local_music_controller.h  i_music_controller.h  i_playback_controller.h
src/adapters/interface/persistance/: i_local_music_access.h  i_music_access.h
src/adapters/models/: albumdetail_valueobject.cpp  albumdetail_valueobject.h  albums_model.cpp  albums_model.h  songs_model.cpp  songs_model.h
src/application/: CMakeLists.txt  local_music_service.cpp  local_music_service.h  music_service.cpp  music_service.h  playback_service.cpp  playback_service.h
src/application/interface/gateways/: i_local_music_gateway.h  i_music_gateway.h
src/application/interface/services/: i_local_music_service.h  i_music_service.cpp  i_music_service.h  i_playback_service.h
src/domain/: CMakeLists.txt  album.h  creator.cpp  creator.h  domain_export.h  song.h
src/infrastructure/: CMakeLists.txt  api_error_helper.h  endpoints.h  infrastructure_export.h  local_media_files_suffix_filter.h.in  local_music_access.cpp  local_music_access.h  music_access.cpp  music_access.h
src/presentation/: CMakeLists.txt  dog.cpp  dog.h  sources.qrc
src/presentation/qml/: ClosePrompt.qml  IconSheet.qml  Main.qml  PageNavigationLogic.js  SideBar.qml  SideBarItem.qml  StyleSheet.qml  TitleBar.qml
src/presentation/qml/changeSkinPage/: ChangeSkinPage.qml
src/presentation/qml/communityPage/: CommunityPage.qml
src/presentation/qml/downloadManagerPage/: DownloadManagerPage.qml
src/presentation/qml/favoritePage/: FavoritePage.qml
src/presentation/qml/localMusicPage/: LocalMusicFunctionalBar.qml  LocalMusicPage.qml  LocalMusicPlayItem.qml
src/presentation/qml/messageCenterPage/: MessageCenterPage.qml
src/presentation/qml/modules/CustomComponents/: CButton.qml  RoundImage.qml  WrapFlickable.qml  qmldir
src/presentation/qml/modules/CustomComponents/Buttons/: CButton.qml  CTextButton.qml
src/presentation/qml/modules/CustomComponents/Checkbox/: CCheckBox.qml
src/presentation/qml/musicPlayerBar/: MusicPlayerBar.qml
src/presentation/qml/playBackList/: PlaybackList.qml  PlaybackListItem.qml
src/presentation/qml/playControlBar/: CustomSlider.qml  MusicDiscButton.qml  PlayControlBar.qml
src/presentation/qml/playList/: PlaybackList.qml
src/presentation/qml/playListDetailPage/: PlayListItem.qml  PlaylistDetailPage.qml
src/presentation/qml/podcastPage/: PodcastPage.qml
src/presentation/qml/recentPage/: RecentPage.qml
src/presentation/qml/settingPage/: SettingPage.qml
src/presentation/qml/sidebar/: SideBar.qml  SideBarItem.qml
src/presentation/qml/storePage/: PageNavigationLogic.js  PlaylistItem.qml  PlaylistSquare.qml  RankingList.qml  STabBar.qml  SelectivePane.qml  SingerList.qml  StorePage.qml  TabBarItem.qml
src/presentation/qml/titlebar/: SearchBox.qml  TitleBar.qml
